--- a/web/src/main/webapp/registrarUsuario.xhtml
+++ b/web/src/main/webapp/registrarUsuario.xhtml
@@ -12,7 +12,7 @@
 
     <ui:define name="title">Unilocal | Registrar Usuario</ui:define>
     <ui:define name="content">
-        <p:panel header="Registrar Usuario">
+        <p:panel header="Registrar Usuario" style="align-items: center">
             <h:form>
                 <h:panelGrid columns="3" cellpadding="5">
                     <p:outputLabel for="nombre_usuario" value="Nombre completo"/>
