--- a/web/src/main/webapp/WEB-INF/plantilla.xhtml
+++ b/web/src/main/webapp/WEB-INF/plantilla.xhtml
@@ -12,6 +12,9 @@
 <h:head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="Cache-Control" content ="no-cache"/>
+    <meta http-equiv="expires" content="0"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
     <h:outputStylesheet library="css" name="bootstrap.min.css"/>
     <h:outputStylesheet library="css" name="style.css"/>
     <h:outputScript library="js" name="bootstrap.bundle.min.js"/>
@@ -41,13 +44,13 @@
                                 <a class="nav-link" href="/registrarUsuario.xhtml">Registrarse</a>
                             </li>
                             <li class="nav-item" jsf:rendered="#{seguridadBean.autenticado and seguridadBean.rol == 'usuario'}">
-                                <a class="nav-link" href="/usuario/usuario.xhtml">Perfil</a>
+                                <a class="nav-link" href="/usuario/usuario.xhtml">Perfil(#{seguridadBean.persona.nombre})</a>
                             </li>
                             <li class="nav-item" jsf:rendered="#{seguridadBean.autenticado and seguridadBean.rol == 'administrador'}">
-                                <a class="nav-link" href="/administrador/administrador.xhtml">Perfil</a>
+                                <a class="nav-link" href="/administrador/administrador.xhtml">Perfil(#{seguridadBean.persona.nombre})</a>
                             </li>
                             <li class="nav-item" jsf:rendered="#{seguridadBean.autenticado and seguridadBean.rol == 'moderador'}">
-                                <a class="nav-link" href="/moderador/moderador.xhtml">Perfil</a>
+                                <a class="nav-link" href="/moderador/moderador.xhtml">Perfil(#{seguridadBean.persona.nombre})</a>
                             </li>
                             <li class="nav-item" jsf:rendered="#{seguridadBean.autenticado and seguridadBean.rol == 'administrador'}">
                                 <a class="nav-link" href="/administrador/registrarModerador.xhtml">Registrar Moderador</a>
