--- a/web/src/main/webapp/resultadoBusqueda.xhtml
+++ b/web/src/main/webapp/resultadoBusqueda.xhtml
@@ -29,7 +29,8 @@
 
                     <p:dataViewGridItem>
                         <div class="card" style="width: 18rem;">
-                            <img src="/uploads/#{lugar.imagenPrincipal}" class="card-img-top" alt="..."/>
+                            <img width="250" height="250" src="/uploads/#{lugar.imagenPrincipal}"
+                                 class="card-img-top" alt="..."/>
                             <div class="card-body">
                                 <h5 class="card-title">#{lugar.nombre}</h5>
                                 <p class="card-text">#{lugar.descripcion}</p>
@@ -43,7 +44,8 @@
 
                     <p:dataViewListItem>
                         <h:panelGrid columns="3" style="width:100%" columnClasses="logo,detail">
-                            <p:graphicImage url="/uploads/#{lugar.imagenPrincipal}" styleClass="imagen-lugar"/>
+                            <p:graphicImage width="150" height="150" url="/uploads/#{lugar.imagenPrincipal}"
+                                            styleClass="imagen-lugar"/>
                             <p:outputPanel>
                                 <h:panelGrid columns="2" cellpadding="5">
                                     <h:outputText value="Nombre:"/>
